--- a/src/get_started.html
+++ b/src/get_started.html
@@ -41,19 +41,19 @@
   <div class="slide-menu bg-dark animated slideInRight d-none" id="slideMenu">
     <ul class="nav mr-auto d-flex flex-column mt-5">
       <li class="nav-item">
-        <a class="nav-link" href="index.html">Home</a>
+        <a class="nav-link" href="index.html"><i class="fas fa-home mr-3"></i>Home</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="pricing.html">Pricing</a>
+        <a class="nav-link" href="pricing.html"><i class="far fa-money-bill-alt mr-3"></i>Pricing</a>
       </li>
       <li class="nav-item active">
-        <a class="nav-link" href="get_started.html">Get Started</a>
+        <a class="nav-link" href="get_started.html"><i class="fas fa-flag-checkered mr-3 pr-1"></i>Get Started</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="contact.html">Contact</a>
+        <a class="nav-link" href="contact.html"><i class="far fa-envelope mr-3 pr-1"></i>Contact</a>
       </li>
       <li class="nav-item mt-3 d-sm-none">
-        <a class="nav-link" href="index.html"><i class="fas fa-user-alt mr-2"></i>Client Login</a>
+        <a class="nav-link" href="index.html"><i class="fas fa-user-alt mr-3"></i>Client Login</a>
       </li>
     </ul>
   </div>
@@ -78,13 +78,13 @@
     <section id="form">
       <div class="container">
         <form action="#">
-          <div class="row">
+          <div class="row d-flex justify-content-center">
             <!-- About Company -->
-            <div class="col-12 col-lg-6">
-              <h4 class="text-center animated fadeIn"><span class="number-1 h2 text-info font-weight-bold">1 -</span> Tell Us About Your <span>Business</span></h4>
-              <p class="text-center animated fadeIn">Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores quisquam perspiciatis incidunt illum adipisci accusamus!</p>
+            <div class="col-12 col-lg-9 col-xl-6">
               <div class="card mt-4 shadow animated fadeInUp">
                 <div class="card-body">
+                  <h4 class="text-center animated fadeIn"><span class="number-1 h2 text-info font-weight-bold">1 -</span> Tell Us About Your <span>Business</span></h4>
+                  <p class="text-center animated fadeIn">Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic aut incidunt cumque voluptatem ipsam quisquam!</p>
                   <!-- Clients Name -->
                   <div class="form-group mt-2">
                     <label for="name">Your Name</label>
@@ -164,11 +164,12 @@
             </div>
 
             <!-- About Project -->
-            <div class="col-12 col-lg-6 mt-5 mt-lg-0 pt-4 pt-lg-0">
-              <h4 class="text-center animated fadeIn"><span class="number-2 h2 text-info font-weight-bold">2 -</span> Tell Us About Your <span>Project</span></h4>
-              <p class="text-center animated fadeIn">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dignissimos, mollitia. Odio sed earum esse harum.</p>
+            <div class="col-12 col-lg-9 col-xl-6 mt-5 mt-xl-0 pt-4 pt-lg-0">
+              
               <div class="card mt-4 shadow animated fadeInUp">
                 <div class="card-body">
+                  <h4 class="text-center animated fadeIn mt-3 mt-sm-0"><span class="number-2 h2 text-info font-weight-bold">2 -</span> Tell Us About Your <span>Project</span></h4>
+                  <p class="text-center animated fadeIn">Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique possimus quas libero, vitae cum fugit.</p>
                   <!-- Project Name -->
                   <div class="form-group mt-2">
                     <label for="projectName">Project Name</label>
@@ -229,7 +230,9 @@
                       </div>
                     </div>
                   </div> 
-                  <button type="submit" class="btn btn-primary float-right mt-4">Submit Project Brief</button>                              
+                  <div class="d-flex justify-content-center">
+                    <button type="submit" class="btn btn-primary mt-4">Submit Project Brief</button> 
+                  </div>
                 </div>
               </div>
             </div>
@@ -251,13 +254,13 @@
             <h4>Website</h4>
             <ul class="nav flex-column">
                 <li class="nav-item link">
-                  <a class="nav-link hvr-underline-from-left" href="index.html">Home</a>
+                  <a class="nav-link hvr-underline-from-left" href="index.html"><i class="fas fa-home mr-3"></i>Home</a>
                 </li>
                 <li class="nav-item link">
-                  <a class="nav-link hvr-underline-from-left" href="pricing.html">Pricing</a>
+                  <a class="nav-link hvr-underline-from-left" href="pricing.html"><i class="far fa-money-bill-alt mr-3"></i>Pricing</a>
                 </li>
                 <li class="nav-item link">
-                  <a class="nav-link active" href="get_started.html">Get Started</a>
+                  <a class="nav-link active" href="get_started.html"><i class="fas fa-flag-checkered mr-3 pr-1"></i>Get Started</a>
                 </li>
               </ul>
             </div>
