--- a/src/pricing.html
+++ b/src/pricing.html
@@ -43,16 +43,16 @@
   <div class="slide-menu bg-dark animated slideInRight d-none" id="slideMenu">
     <ul class="nav mr-auto d-flex flex-column mt-5">
       <li class="nav-item">
-        <a class="nav-link" href="index.html">Home</a>
+        <a class="nav-link" href="index.html"><i class="fas fa-home mr-3"></i>Home</a>
       </li>
       <li class="nav-item active">
-        <a class="nav-link" href="pricing.html">Pricing</a>
+        <a class="nav-link" href="pricing.html"><i class="far fa-money-bill-alt mr-3"></i>Pricing</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="get_started.html">Get Started</a>
+        <a class="nav-link" href="get_started.html"><i class="fas fa-flag-checkered mr-3"></i>Get Started</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="contact.html">Contact</a>
+        <a class="nav-link" href="contact.html"><i class="far fa-envelope mr-3 pr-1"></i>Contact</a>
       </li>
       <li class="nav-item mt-3 d-sm-none">
         <a class="nav-link" href="index.html"><i class="fas fa-user-alt mr-2"></i>Client Login</a>
@@ -78,7 +78,7 @@
 
     <!-- Pricing Tables -->
     <section id="pricingTables">
-      <div class="container">
+      <div class="container animated fadeIn">
         <div class="row">
           <div class="col-12">
 
@@ -370,13 +370,13 @@
             <h4>Website</h4>
             <ul class="nav flex-column">
                 <li class="nav-item link">
-                  <a class="nav-link hvr-underline-from-left" href="index.html">Home</a>
+                  <a class="nav-link hvr-underline-from-left" href="index.html"><i class="fas fa-home mr-3"></i>Home</a>
                 </li>
                 <li class="nav-item link ">
-                  <a class="nav-link active" href="pricing.html">Pricing</a>
+                  <a class="nav-link active" href="pricing.html"><i class="far fa-money-bill-alt mr-3"></i>Pricing</a>
                 </li>
                 <li class="nav-item link">
-                  <a class="nav-link hvr-underline-from-left" href="get_started.html">Get Started</a>
+                  <a class="nav-link hvr-underline-from-left" href="get_started.html"><i class="fas fa-flag-checkered mr-3 pr-1"></i>Get Started</a>
                 </li>
               </ul>
             </div>
