--- a/src/index.html
+++ b/src/index.html
@@ -41,19 +41,19 @@
   <div class="slide-menu bg-dark animated slideInRight d-none" id="slideMenu">
     <ul class="nav mr-auto d-flex flex-column mt-5">
       <li class="nav-item active">
-        <a class="nav-link" href="index.html">Home</a>
+        <a class="nav-link" href="index.html"><i class="fas fa-home mr-3"></i>Home</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="pricing.html">Pricing</a>
+        <a class="nav-link" href="pricing.html"><i class="far fa-money-bill-alt mr-3"></i>Pricing</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="get_started.html">Get Started</a>
+        <a class="nav-link" href="get_started.html"><i class="fas fa-flag-checkered mr-3 pr-1"></i>Get Started</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="contact.html">Contact</a>
+        <a class="nav-link" href="contact.html"><i class="far fa-envelope mr-3 pr-1"></i>Contact</a>
       </li>
       <li class="nav-item mt-3 d-sm-none">
-        <a class="nav-link" href="index.html"><i class="fas fa-user-alt mr-2"></i>Client Login</a>
+        <a class="nav-link" href="index.html"><i class="fas fa-user-alt mr-3"></i>Client Login</a>
       </li>
     </ul>
   </div>
@@ -235,7 +235,7 @@
             </ul>
           </div>
           <div id="servers_hosting" class="col-6 col-lg-3 opacity">
-            <h4 class="mb-4 mt-4 mt-lg-0">Servers & Hosting</h4>
+            <h4 class="mb-4 mt-4 mt-lg-0">Servers</h4>
             <ul>
               <li><img class="img-fluid" src="assets/icons/d_o_icon.svg" alt=""></li>
               <li><img class="img-fluid" src="assets/icons/netlify_icon.svg" alt=""></li>
@@ -265,13 +265,13 @@
             <h4>Website</h4>
             <ul class="nav flex-column">
                 <li class="nav-item link">
-                  <a class="nav-link active" href="index.html">Home</a>
+                  <a class="nav-link active" href="index.html"><i class="fas fa-home mr-3"></i>Home</a>
                 </li>
                 <li class="nav-item link">
-                  <a class="nav-link hvr-underline-from-left" href="pricing.html">Pricing</a>
+                  <a class="nav-link hvr-underline-from-left" href="pricing.html"><i class="far fa-money-bill-alt mr-3"></i>Pricing</a>
                 </li>
                 <li class="nav-item link">
-                  <a class="nav-link hvr-underline-from-left" href="get_started.html">Get Started</a>
+                  <a class="nav-link hvr-underline-from-left" href="get_started.html"><i class="fas fa-flag-checkered mr-3 pr-1"></i>Get Started</a>
                 </li>
               </ul>
             </div>
