--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
       <div class="float-right">
         <ul class="navbar-nav mr-auto animated fadeInRight">
           <li class="nav-item mr-4 d-none d-sm-block">
-            <a class="nav-link" href="index.html"><i class="fas fa-user-alt mr-2"></i>Client Login</a>
+            <a class="nav-link" href="client_login.html"><i class="fas fa-user-alt mr-2"></i>Client Login</a>
           </li>
           <li class="nav-item slide-nave-toggle">
             <div id="slideNavToggle">
